--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text">
-                        <h3>Log In</h3>
+                        <h3>Logging</h3>
                     </div>
                 </div>
             </div>
